# mltools

./: .gitignore  example_conda.yaml  pyproject.toml  setup.py
.github/workflows/: nightly.yaml
mltools/: data.py  model.py  utils.py
mltools/architecture/: TF_IDF_Vectorizer_KNN.py  __init__.py
notebooks/analytics/: PB.ipynb  SLSP_model_analysis.ipynb  SLSP_model_preparation.ipynb  basic_training_clustering.ipynb
notebooks/experiments/: chopped_multilabel_docs.ipynb  xgb_custom_loss.py
notebooks/utils/: read_badly_delimited_csv.ipynb
src/: __init__.py  data.py  model.py  utils.py
src/mltools/: __init__.py  logging.py  metrics.py  model.py  preprocessing.py  utils.py
src/mltools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/mltools/architecture/: ConfidenceDecider.py  DatesToTimedeltasPreprocessor.py  NanFiller.py  OCR_Evaluator.py  RawToOHE.py  Relabeller.py  TF_IDF_Classifier.py  TF_IDF_Multilabel_Classifier.py  TF_IDF_Vectorizer_Classifier.py  TF_IDF_Vectorizer_RF.py  TF_IDF_Vectorizer_SVM.py  TF_IDF_Vectorizer_XGBoost.py  TF_IDF_XGBoost.py  TextPreprocessor.py  __init__.py  utils.py
src/mltools/data/: __init__.py  data.py  preprocess.py
src/mltools/feature_store/: __init__.py
src/mltools/feature_store/core/: Automat.py  Calculator.py  Census.py  Client.py  DB_Connector.py  FeatureAutomat.py  FeatureCalculator.py  FeatureCollector.py  FeatureStoreClient.py  Metadata.py  (+6 more)
src/mltools/mltools.egg-info/: PKG-INFO  SOURCES.txt
src/mltools/utils/: __init__.py  errors.py  report.py  utils.py
tests/: test_utils.py
tests/mltools/architecture/: test_OCR_Evaluator.py
(+10 files in other folders)
